fix drag and drop and upload to chrome store

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "JobFlow - Job Application Tracker",
-  "version": "2.0.0",
-  "description": "Track and manage your job applications",
+  "version": "1.0.0",
+  "description": "Save jobs with one click, track applications on a Kanban board, and manage your entire job search in one place.",
   "permissions": ["storage", "activeTab", "scripting"],
   "action": {
     "default_popup": "src/popup/popup.html",
@@ -19,7 +19,18 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": [
+        "https://www.linkedin.com/jobs/*",
+        "https://www.indeed.com/*",
+        "https://www.glassdoor.com/job-listing/*",
+        "https://www.glassdoor.com/Job/*",
+        "https://boards.greenhouse.io/*",
+        "https://jobs.greenhouse.io/*",
+        "https://jobs.lever.co/*",
+        "https://*.myworkdayjobs.com/*",
+        "https://wellfound.com/jobs/*",
+        "https://angel.co/jobs/*"
+      ],
       "js": ["src/content/scraper.ts"]
     }
   ],
