--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,10 @@
 {
   "manifest_version": 3,
   "name": "JobFlow - Job Application Tracker",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Save jobs with one click, track applications on a Kanban board, and manage your entire job search in one place.",
-  "permissions": ["storage", "activeTab"],
+  "permissions": ["storage", "activeTab", "scripting"],
+  "host_permissions": ["<all_urls>"],
   "action": {
     "default_popup": "src/popup/popup.html",
     "default_icon": {
@@ -19,19 +20,9 @@
   },
   "content_scripts": [
     {
-      "matches": [
-        "https://www.linkedin.com/jobs/*",
-        "https://www.indeed.com/*",
-        "https://www.glassdoor.com/job-listing/*",
-        "https://www.glassdoor.com/Job/*",
-        "https://boards.greenhouse.io/*",
-        "https://jobs.greenhouse.io/*",
-        "https://jobs.lever.co/*",
-        "https://*.myworkdayjobs.com/*",
-        "https://wellfound.com/jobs/*",
-        "https://angel.co/jobs/*"
-      ],
-      "js": ["src/content/scraper.ts"]
+      "matches": ["<all_urls>"],
+      "js": ["src/content/scraper.ts"],
+      "run_at": "document_idle"
     }
   ],
   "options_page": "index.html"
